Add popup login form for voting and make the login/signup process a bit more evident/friendly, by redirecting to the same path from where the registration was started.

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -145,3 +145,31 @@ a {
     background: lighten($color, 40);
   }
 }
+
+#overlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background-color: gray;
+  opacity: .7;
+  filter: alpha(opacity=70);
+  z-index: 1;
+  display: none;
+}
+
+#signup_form {
+  position: fixed;
+  width: 100%;
+  top: 20%;
+  display: none;
+  .row .panel {
+    background-color: white;
+  }
+  z-index: 2;
+  .right {
+    a { color: #111; }
+    float: right;
+  }
+}
