Fix editing of gists and add simple gists admin controller

--- a/app/views/admin/base/index.html.slim
+++ b/app/views/admin/base/index.html.slim
@@ -3,3 +3,9 @@ h1 Hi #{@user.email}
 h2 Users
 p We have #{@user_count} users
 
+h2 Papers
+p We have #{@paper_count} papers
+
+h2 Gists
+p We have #{@gist_count} gists
+
