--- a/app/views/admin/posts/_form.html.slim
+++ b/app/views/admin/posts/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for [:admin, post], :html => {:class => 'form-vertical'} do |f|
+= simple_form_for [:admin, post] do |f|
   = f.input :title
   = f.input :author
   = f.input :published
