--- a/app/views/layouts/admin/layout.html.slim
+++ b/app/views/layouts/admin/layout.html.slim
@@ -6,16 +6,12 @@ html
     = javascript_include_tag "application"
     = stylesheet_link_tag "admin/base"
     = csrf_meta_tags
-    = load_typekit
   body#admin
-    header.navbar.navbar-fixed-top
-      nav.navbar-inner
-        .container
-          = render 'layouts/admin/navigation'
+    = render 'layouts/admin/navigation'
     #main
       .container
         .content
           .row
-            #mainspan.span12
+            .large-12.columns
               = yield
           footer
