Use new version of paper_metadata, which includes the DataCite API.

--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -45,4 +45,5 @@ $input-border-width: 1px;
 $input-box-shadow: none;
 $button-font-weight: 600;
 
+$alert-color: $color_red;
 $alert-font-weight: 600;
