--- a/app/views/gists/_form.html.slim
+++ b/app/views/gists/_form.html.slim
@@ -3,10 +3,9 @@ p
   | First, tell us which paper this gist is for, by providing its identifier:
 = f.simple_fields_for :paper do |p|
   = p.input :identifier, label: 'DOI or arXiv', placeholder: 'DOI (e.g. “doi: 10.1021/ac1014832”) or arXiv identifier (e.g. “arXiv:1301.7746”)'
-  = p.input :title, input_html: { id: 'title'}, placeholder: 'Fill in identifier above'
-  = p.simple_fields_for :metadata do |m|
-    = m.input :authors, input_html: { id: 'authors', value: paper.authors}, required: false, placeholder: 'Fill in identifier above'
-    = m.input :journal, input_html: { id: 'journal', value: paper.journal}, required: false, placeholder: 'Fill in identifier above'
+  = p.input :title, input_html: { id: 'title'}, placeholder: 'Fill in identifier above', required: false
+  = p.input :authors, input_html: { id: 'authors', value: paper.authors}, required: false, placeholder: 'Fill in identifier above'
+  = p.input :journal, input_html: { id: 'journal', value: paper.journal}, required: false, placeholder: 'Fill in identifier above'
 p
   strong Gist&nbsp;
   | Describe in simple terms what the paper is about:
