--- a/app/views/gists/edit.html.slim
+++ b/app/views/gists/edit.html.slim
@@ -1,3 +1,5 @@
-h1 Edit
-= simple_form_for @gist do |f|
-  = render 'form', f: f, paper: @gist.paper
+.row
+  .large-12.columns
+    h1 Edit
+    = simple_form_for @gist do |f|
+      = render 'form', f: f, paper: @gist.paper
