Fix blog and add first blog post

--- a/app/views/layouts/_blog_header.html.slim
+++ b/app/views/layouts/_blog_header.html.slim
@@ -1,6 +1,2 @@
-.header
-  .container
-    .row
-      .span8.offset2
-        = render 'layouts/brand', title: 'The Blog'
-
+.hide-for-small.logo.center= image_tag '/images/sciencegist-logo-medium.png'
+.show-for-small.logo.center= image_tag '/images/sciencegist-logo-small.png'
