--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -49,6 +49,7 @@ body {
    font-family: freight-sans-pro, sans-serif;
    font-style: normal;
    font-weight: 500;
+   line-height: 1.2;
   }
   .information {
     font-family: freight-sans-pro, sans-serif;
@@ -59,5 +60,21 @@ body {
     font-size: 16px;
     font-size: .8rem;
     line-height: 1.875;
+  }
+}
+
+#blog {
+  .post {
+    img {
+      margin-bottom: 1em;
+    }
+  }
+  .logo {
+    margin: 1em;
+  }
+  .footer {
+    .logos {
+      margin-bottom: 1em;
+    }
   }
 }
