--- a/app/views/blog/_post.html.slim
+++ b/app/views/blog/_post.html.slim
@@ -1,5 +1,7 @@
-.row.post
-  .span8
-    h1.title= post.title
-    p.information #{post.author} on #{post.friendly_published_at}
-    p.content== post.html
+.post
+  h1.title= post.title
+  p.information #{post.author.html_safe} on #{post.friendly_published_at}
+  p.content== post.html
+  p.social
+    | <a href="https://twitter.com/share" class="twitter-share-button" data-via="ScienceGist" data-size="normal">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    | <a href="https://news.ycombinator.com/submit" class="hn-button" data-count="horizontal" data-style="twitter">Vote on Hacker News</a><script type="text/javascript">var HN=[];HN.factory=function(e){return function(){HN.push([e].concat(Array.prototype.slice.call(arguments,0)))};},HN.on=HN.factory("on"),HN.once=HN.factory("once"),HN.off=HN.factory("off"),HN.emit=HN.factory("emit"),HN.load=function(){var e="hn-button.js";if(document.getElementById(e))return;var t=document.createElement("script");t.id=e,t.src="//hn-button.herokuapp.com/hn-button.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n)},HN.load();</script>
