--- a/app/views/layouts/_blog_footer.html.slim
+++ b/app/views/layouts/_blog_footer.html.slim
@@ -1,6 +1,7 @@
-.row
-  .span8.offset2
-    .footer
-      | If you would like to help out with ScienceGist or you have some ideas of your own that you would like to chat about, shoot an e-mail to #{ link_to('me@juretriglav.si','mailto:me@juretriglav.si') } or follow me on #{ link_to('Twitter', 'https://twitter.com/ScienceGist')}.&nbsp;
-      strong Thanks!
+.footer
+  | If you would like to help out with ScienceGist or you have some ideas of your own that you would like to chat about, send an e-mail to #{ link_to('info@sciencegist.com','mailto:info@sciencegist.com') } or follow us on #{ link_to('Twitter', 'https://twitter.com/ScienceGist')}.&nbsp;
+  strong Thanks!
+  .center.logos
     = image_tag '/images/publicdomain.png'
+    | &nbsp;
+    = image_tag '/images/sciencegist-logo-micro-grayscale.png'
