--- a/app/views/layouts/blog.html.slim
+++ b/app/views/layouts/blog.html.slim
@@ -1,6 +1,7 @@
 html
   head
     title= content_for?(:title) ? "ScienceGist Blog - #{yield(:title)}"  : "The ScienceGist Blog" 
+    meta name="viewport" content="width=device-width, initial-scale=1.0"
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "application"
     = stylesheet_link_tag "blog"
