Make logo on blog link to home page

--- a/app/views/layouts/_blog_header.html.slim
+++ b/app/views/layouts/_blog_header.html.slim
@@ -1,2 +1,2 @@
-.hide-for-small.logo.center= image_tag '/images/sciencegist-logo-medium.png'
-.show-for-small.logo.center= image_tag '/images/sciencegist-logo-small.png'
+.hide-for-small.logo.center=link_to image_tag('/images/sciencegist-logo-medium.png'), root_url(subdomain: 'www')
+.show-for-small.logo.center=link_to image_tag('/images/sciencegist-logo-small.png'), root_url(subdomain: 'www')
