--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -9,6 +9,8 @@ nav.top-bar
         span
 
   section.top-bar-section
+    ul.left
+      li= link_to 'Tags', tags_path
     ul.right
       li= link_to 'Add gist', new_gist_path
       - if current_user
