--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -2,7 +2,7 @@
   .large-12.columns 
     h1 Profile
     p= image_tag @user.gravatar_url, width: 80, height: 80
-    p This is user #{@user.email}'s profile. This user has #{@user.karma} points, which they got by writing #{@user.gists.size} gists.
+    p This is user #{@user.name}'s profile. This user has #{@user.karma} points, which they got by writing #{@user.gists.size} gists.
     p 
       | User wrote gists:
       ul
