--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -43,7 +43,11 @@ body*{:class => "#{controller.controller_name}_#{controller.action_name}" }
               p If you're already a user, you can sign in here:
               = simple_form_for new_user, :url => session_path(:user) do |u|
                 = render 'users/form_popup', f: u, button_text: 'Sign in', button_class: 'secondary'
-
+          .row
+            .large-12.columns
+              hr
+              .center
+                = link_to "Login with Twitter", user_omniauth_authorize_path(:twitter)
   javascript:
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
