--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -11,6 +11,7 @@ nav.top-bar
   section.top-bar-section
     ul.left
       li= link_to 'Tags', tags_path
+      li= link_to 'What is a good gist?', pages_example_path
     ul.right
       li= link_to 'Add gist', new_gist_path
       - if current_user
