--- a/app/views/gists/_form.html.slim
+++ b/app/views/gists/_form.html.slim
@@ -1,12 +1,11 @@
 p
-  strong Identifier (DOI or arXiv)&nbsp;
   | First, tell us which paper this gist is for, by providing its identifier:
 = f.simple_fields_for :paper do |p|
   = p.input :identifier, label: 'DOI or arXiv', placeholder: 'DOI (e.g. “doi: 10.1021/ac1014832”) or arXiv identifier (e.g. “arXiv:1301.7746”)'
   = p.input :title, input_html: { id: 'title'}, placeholder: 'Fill in identifier above', required: false
   = p.input :authors, input_html: { id: 'authors', value: paper.authors}, required: false, placeholder: 'Fill in identifier above'
   = p.input :journal, input_html: { id: 'journal', value: paper.journal}, required: false, placeholder: 'Fill in identifier above'
-  = p.input :tag_list, placeholder: "Tag this paper"
+  = p.input :tag_list, placeholder: "Tag this paper", label: 'Tags for this paper'
  
 p
   strong Gist&nbsp;
