Add users' avatars to admin interface

--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -8,8 +8,8 @@
     .add_gist_box
       div.welcome
         p 
-          | ScienceGists are simplified summaries of scientific papers. ScienceGist’s goal is to provide a simple
-          |  version of science. Click “Add gist” below to help.
+          | Science gists are simplified summaries of scientific papers. Our goal is to
+          |  bring science closer to everyone. Click “Add gist” below to help.
       .add_gist
         = link_to 'Add gist', new_gist_path, :class => 'button'
 
