--- a/app/views/admin/base/index.html.slim
+++ b/app/views/admin/base/index.html.slim
@@ -3,6 +3,9 @@ h1 Hi #{@user.email}
 h2 Users
 p We have #{@user_count} users
 
+- @users.each do |user|
+  = image_tag user.gravatar_url
+  
 h2 Papers
 p We have #{@paper_count} papers
 
