--- a/app/views/papers/_header.html.slim
+++ b/app/views/papers/_header.html.slim
@@ -1,4 +1,5 @@
-h1.paper_title=link_to_unless_current paper.title, paper_path(paper) 
+h1.paper_title itemprop="headline"
+  =link_to_unless_current paper.title, paper_path(paper) 
 h5.paper_metadata 
   span 
     #{paper.authors} 
