--- a/app/views/admin/base/index.html.slim
+++ b/app/views/admin/base/index.html.slim
@@ -7,6 +7,10 @@ p We have #{@user_count} users
   = user.id
   = image_tag user.gravatar_url
   
+h2 
+  | Users with images:
+  - User.where(public: true).each do |user|
+    = image_tag user.gravatar_url
 h2 Papers
 p We have #{@paper_count} papers
 
