Initial step towards improved search experience. Pagination and tag search, cleaned up search results display

--- a/app/assets/stylesheets/gists.css.scss
+++ b/app/assets/stylesheets/gists.css.scss
@@ -2,9 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.gist_box, .header {
+.gist_box, .results .paper {
   h1 {
-    font-size: emCalc(23px);
+    font-size: emCalc(16px);
     line-height: 1.6;
   }
 
