--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -1,10 +1,9 @@
 $color: #2ab573;
 $font_color: #1A1A1A;
-$background_color: #F5F4F0;
 $blog_background_color: white;
 //$header_color: darken($background_color, 10);
 $header_color: white;
-$shadow_color: darken($background_color,5);
+$shadow_color: darken(#fff,5);
 
 $box_color: white;
 //Theme colors
