--- a/app/views/pages/_search_form.html.slim
+++ b/app/views/pages/_search_form.html.slim
@@ -3,6 +3,6 @@
     = form_tag papers_path, method: 'get' do
       .row.collapse
         .small-9.columns
-          = text_field_tag(:search, params[:search], class: " input-medium search-query",placeholder: 'Search papers by DOI or title')
+          = text_field_tag(:search, params[:search], class: " input-medium search-query",placeholder: 'Search papers by title, DOI or tag')
         .small-3.columns
-          = button_tag "Search", type: 'submit', class: "button prefix secondary"
+          = submit_tag "Search", type: 'submit', class: "button prefix secondary"
