--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -42,8 +42,9 @@
 
 .row
   .large-6.large-offset-3.columns
-    ul.small-block-grid-5.contact
+    ul.small-block-grid-6.contact
       li= link_to 'About', pages_about_path
+      li= link_to 'Blog', 'http://blog.sciencegist.com'
       li= link_to 'Contact us', 'mailto:info@sciencegist.com'
       li= link_to 'GitHub', 'https://github.com/jure/sciencegist'
       li= link_to 'Twitter', 'https://www.twitter.com/sciencegist'
