Redirect and link to identifier URLs always

--- a/app/views/gists/_gist.html.slim
+++ b/app/views/gists/_gist.html.slim
@@ -1,3 +1,6 @@
+= content_for :title
+  = gist.paper.title
+
 .row itemscope="" itemtype="http://schema.org/Article"
   .large-12.columns
     .gist_box
