--- a/app/views/tags/show.html.slim
+++ b/app/views/tags/show.html.slim
@@ -3,4 +3,4 @@
     h1= @tag
     ul.inline-list
       - Paper.tagged_with(@tag.name).each do |paper|
-        li=link_to "#{paper.title} (#{paper.journal})", paper_path(paper.id)
+        li=link_to "#{paper.title} (#{paper.journal})", paper.identifier_path
