--- a/app/views/tags/index.html.slim
+++ b/app/views/tags/index.html.slim
@@ -5,4 +5,4 @@
       h2.tag= tag
       ul.inline-list
         - Paper.tagged_with(tag.name).each do |paper|
-          li=link_to "#{paper.title} (#{paper.journal})", paper_path(paper.id)
+          li=link_to "#{paper.title} (#{paper.journal})", paper.identifier_path
