Add keywords and change title to Science Gist with a space

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,8 @@ head
   meta charset="utf-8"
   / Set the viewport width to device width for mobile
   meta name="viewport" content="width=device-width, initial-scale=1.0"
-  title= content_for?(:title) ? "ScienceGist - #{yield(:title)}"  : "ScienceGist - Simplifiying science"
+  meta name="keywords" content="simplify science, science gist, sciencegist, gist, simple summaries"
+  title= content_for?(:title) ? "Science Gist - #{yield(:title)}"  : "Science Gist - Simplifiying science"
   = stylesheet_link_tag "application"
   = javascript_include_tag "vendor/custom.modernizr"
   = javascript_include_tag "application"
