Show footer on all pages. Add CC-BY icon everywhere. Starting to address issue #20.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,7 +27,7 @@ body*{:class => "#{controller.controller_name}_#{controller.action_name}" }
       - if flash[:alert]
         .alert-box.alert= alert
   = yield
-
+  = render :partial => 'layouts/footer'
   #overlay
   #signup_form
     .row
