--- a/app/views/layouts/admin/_navigation.html.slim
+++ b/app/views/layouts/admin/_navigation.html.slim
@@ -11,6 +11,8 @@ nav.top-bar
 
   section.top-bar-section
     ul.right
+      li= link_to 'Papers', admin_papers_url
+      li= link_to 'Tags', admin_tags_url
       li= link_to 'Posts', admin_posts_url
       li= link_to 'Gists', admin_gists_url
       li= link_to "Log out", destroy_user_session_path, method: 'delete'
